[tool.poetry]
name = "policy-report"
version = "0.1.0"
description = "code evaluation"
authors = ["Sunny Nie <sunny.nie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
